# event-integrator

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  extensions.py
app/api/: __init__.py  events.py  health.py  schemas.py
app/core/: parser.py  parsing_schemas.py
app/models/: __init__.py  enums.py  event.py  repository.py
app/services/: provider_client.py
app/tasks/: __init__.py  sync.py
docker/: Dockerfile  docker-compose.yml  run.sh
docker/entrypoints/: migrations_entrypoint.sh
docs/: DESIGN_AND_SCALABILITY.md  REVIEWER_TEST_PLAN.md  TASK.md
migrations/versions/: 98f1b5e4a5c8_initial_database_schema.py
scripts/: mock_provider.py
tests/fixtures/: malformed_sample.xml  partially_valid_sample.xml  sample_provider_responses.py  valid_sample.xml
tests/integration/: test_api.py  test_sync_task.py
tests/unit/: test_parser.py  test_repository.py  test_schemas.py
utils/: endpoint_tester.py  test_xml_parser.py
