[tool.poetry]
name = "jesus-izquierdo"
version = "0.1.0"
description = ""
authors = ["Jesús Izquierdo <susej_ic@hotmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-cors = "^5.0.1"
flask-sqlalchemy = "^3.1.1"
flask-caching = "^2.3.1"
flask-migrate = "^4.0.7"
marshmallow = "^3.21.3"
marshmallow-sqlalchemy = "^1.1.0"
apifairy = "^1.4.0"
requests = "^2.32.3"
celery = {extras = ["redis"], version = "^5.4.0"}
psycopg2-binary = "^2.9.9"
lxml = "^5.2.2"
gunicorn = "^22.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
requests = "^2.32.3"
pytest-flask = "^1.3.0"
pytest-cov = "^5.0.0"
flake8 = "^7.1.0"
locust = "^2.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
